2014-05-09  Ramon Novoa  <rnovoa@artica.es>

	* bin/tentacle_server.exe: Added to repository. Tentacle server win32
	  binary.

2014-05-08  Junichi Satoh <junichi@rworks.jp>

	* lib/PandoraFMS/ReconServer.pm: Fixed crash when macros help of
	recon script contains \r, \n or multibyte characters.

2014-05-07  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Tools.pm: Added code to initialize the enterprise module.

2014-05-06  Junichi Satoh <junichi@rworks.jp>

	* lib/PandoraFMS/Core.pm: Improved weekly planned downtime to allow
	accross date. If the stopping time is smaller than the starting time,
	it ends at the stopping time of the next day.
	e.g.) When Saturday 23:00:00-01:00:00 is set, the weekly planned
	downtime ends at Sunday 01:00:00.

2014-05-05  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/ReconServer.pm: Added debug messages.

	* util/recon_scripts/wmi-recon.pl: Added to repository. WMI Recon script.

	* lib/PandoraFMS/WMIServer.pm,
	  util/recon_scripts/snmp-recon.pl: Small fixes.

2014-05-05  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* bin/pandora_server: Added checks and warnings for
	too many threads and verbosity 10.

2014-05-03  Junichi Satoh <junichi@rworks.jp>

	* util/pandora_manage.pl: Added new CLI functions to manage special
	days.

2014-04-27  Junichi Satoh <junichi@rworks.jp>

	* util/recon_scripts/snmp-recon.pl: Added support for FreeBSD.
	
2014-04-27  Junichi Satoh <junichi@rworks.jp>

	* lib/PandoraFMS/PluginServer.pm: Fixed plugin execution failure
	when multibyte characters are used in plugins macros.

2014-04-24  Vanessa Gil <vanessa.gil@artica.es>

	* lib/PandoraFMS/Core.pm: Removed entities
	to events log.

2014-04-23  Vanessa Gil <vanessa.gil@artica.es>

	* lib/PandoraFMS/Core.pm
	  util/pandora_manage.pl: Added functions
	to CLI.

2014-04-22  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_migrate_recon_scripts.pl
	lib/PandoraFMS/ReconServer.pm: Add compatibility for the new