@@ -1,3 +1,8 @@
+2014-05-10  Junichi Satoh <junichi@rworks.jp>
+
+	* util/recon_script/ipmi-recon.pl, util/recon_script/snmpdevices.pl,
+	util/recon_script/wmi-recon.pl: Added support for FreeBSD.
+
 2014-05-09  Ramon Novoa  <rnovoa@artica.es>
 
 	* bin/tentacle_server.exe: Added to repository. Tentacle server win32
